# gdrust

./: Cargo.toml
examples/comprehensive_example/rust/: Cargo.toml
examples/comprehensive_example/rust/src/: lib.rs
gdrust/: Cargo.toml
gdrust/src/: lib.rs  macros.rs
gdrust/src/ecs/: app.rs  engine_controller.rs  engine_sync.rs  mod.rs
gdrust/src/ecs/engine_sync/: components.rs  events.rs  resources.rs  systems.rs
gdrust/src/unsafe_functions/: instance_ext.rs  mod.rs  node_ext.rs  object_ext.rs  packed_scene_ext.rs  ref_ext.rs  resource_loader_ext.rs  spatial_ext.rs  tref_ext.rs
gdrust_macros/: Cargo.toml
gdrust_macros/src/: lib.rs
gdrust_macros/src/compiler/: bundle.rs  hints.rs  impl_block.rs  mod.rs  properties.rs  signal_args.rs  values.rs
