[package]
name = "rust"
version = "0.1.0"
authors = ["gdrust developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdrust = { path = "../../../gdrust" }
gdnative = { git = "https://github.com/godot-rust/godot-rust.git" }
bevy = { version = "0.6", default-features = false }

[lib]
crate-type = ["cdylib"]